[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/menus/main_menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://interface/ext_button.gd" type="Script" id=2]
[ext_resource path="res://interface/textures/pb_icon.png" type="Texture" id=3]
[ext_resource path="res://interface/textures/title.png" type="Texture" id=4]
[ext_resource path="res://interface/textures/sound_volume_icon.png" type="Texture" id=5]
[ext_resource path="res://interface/menus/BackgroundTilemap.tscn" type="PackedScene" id=6]
[ext_resource path="res://effects/TransitionRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://interface/textures/music_volume_icon.png" type="Texture" id=8]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -37.0
margin_right = 48.0
margin_bottom = -13.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 56.0
margin_top = 17.0
margin_right = 104.0
margin_bottom = 69.0
rect_min_size = Vector2( 48, 0 )
custom_constants/separation = 0

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 48.0
margin_bottom = 13.0
text = "Start"
script = ExtResource( 2 )

[node name="HelpButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 48.0
margin_bottom = 26.0
text = "Help"
script = ExtResource( 2 )

[node name="CreditsButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 48.0
margin_bottom = 39.0
text = "Credits"
script = ExtResource( 2 )

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 48.0
margin_bottom = 52.0
text = "Quit"
script = ExtResource( 2 )

[node name="SoundVolumeSlider" type="HSlider" parent="CanvasLayer"]
margin_left = 17.0
margin_top = 8.0
margin_right = 37.0
margin_bottom = 16.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Icon" type="TextureRect" parent="CanvasLayer/SoundVolumeSlider"]
margin_left = -9.0
margin_right = -1.0
margin_bottom = 8.0
texture = ExtResource( 5 )

[node name="MusicVolumeSlider" type="HSlider" parent="CanvasLayer"]
margin_left = 17.0
margin_top = 16.0
margin_right = 37.0
margin_bottom = 24.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Icon" type="TextureRect" parent="CanvasLayer/MusicVolumeSlider"]
margin_left = -9.0
margin_right = -1.0
margin_bottom = 8.0
texture = ExtResource( 8 )

[node name="PBLabel" type="Label" parent="CanvasLayer"]
margin_left = 109.0
margin_top = 5.0
margin_right = 152.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "--:--.--"
align = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PBLabel"]
margin_left = 5.0
margin_top = 3.0
margin_right = 13.0
margin_bottom = 11.0
texture = ExtResource( 3 )

[node name="TransitionRect" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="BackgroundTilemap" parent="." instance=ExtResource( 6 )]
